** Added table handling so they are loaded in separate wrapper to prevent overlapping the content area if table's width is too wide

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_workspace-materials-defaults.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_workspace-materials-defaults.scss
@@ -26,6 +26,12 @@
   z-index:999;
 }
 
+.table-wrapper {
+  max-width:100%;
+  overflow-x:auto;
+  
+}
+
 .textfield-wrapper {
   display:inline-block;
   position:relative;
